# setu

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
cert/: cert.pem
clients/typescript/: README.md  dev-deps.ts  javascript  src  tsconfig.json
clients/typescript/javascript/: mod.d.ts  mod.js  mod.js.map
clients/typescript/src/: bitset.ts  errors.ts  helper.ts  http.transport.ts  input.ts  mod.ts  status.ts  timeout.ts
clients/typescript/tests/: bitvec.test.ts  bytes.test.ts  frame.test.ts  setu.frame.test.ts  setu.test.ts  stream.test.ts  timeout.test.ts  varint.test.ts
clients/typescript/tools/: bundle.ts  utils.ts
crates/randox/: Cargo.toml  README.md
crates/randox/src/: attrs.rs  expend.rs  lib.rs
examples/: bench.rs
examples/src/: mod.rs
frpc/macros/: Cargo.toml
frpc/macros/src/: lib.rs
libs/lipi/: Cargo.toml  README.md  specification.md
libs/lipi/benches/: basic.rs  data.rs
libs/lipi/derive/: Cargo.toml
libs/lipi/derive/src/: decoder.rs  encoder.rs  errors.rs  lib.rs  utils.rs
libs/lipi/macros/: Cargo.toml
libs/lipi/macros/src/: lib.rs
libs/lipi/src/: bit_set.rs  convert.rs  decode.rs  decoder.rs  encoder.rs  encoder_new.rs  entries.rs  errors.rs  lib.rs  print.rs  utils.rs  varint.rs  zig_zag.rs
libs/lipi/src/convert/: decoder.rs  encoder.rs  mod.rs  skip.rs
libs/lipi/src/decoder/: mod.rs
libs/lipi/src/encoder/: field.rs  mod.rs  optional_field.rs
libs/lipi/src/value/: entries.rs  list.rs  mod.rs  table.rs
libs/lipi/tests/: all_types.rs  benchmark.rs  custom_types.rs  data.rs  playground.rs  skip.rs  structure.rs
libs/message/: Cargo.toml
libs/message/src/: lib.rs
libs/message/tests/: basic.rs
libs/setu/: Cargo.toml
libs/setu-codegen/: Cargo.toml
libs/setu-codegen/clients/: README.md  javascript  (+1 more)
libs/setu-type-info/: Cargo.toml
libs/setu/derive/: Cargo.toml
libs/setu/derive/src/: lib.rs  parse.rs  utils.rs
libs/setu/docs/: SETU-HTTP2.md
libs/setu/examples/: hello_world.rs
libs/setu/macros/: Cargo.toml
libs/setu/macros/src/: lib.rs  utils.rs
libs/setu/src/: __private.rs  input.rs  lib.rs  output.rs  status_code.rs  timeout.rs  trailer.rs  types.rs
libs/setu/src/context/: mod.rs  sorted_map.rs  store.rs
libs/setu/src/frame/: mod.rs  writer.rs
libs/setu/src/transport/: frame.rs  http.rs  mod.rs  tls.rs
libs/setu/src/transport/http/: mod.rs  request.rs  response.rs  rpc_router.rs  rpc_utils.rs
libs/setu/src/utils/: mod.rs
libs/std-lib/: Cargo.toml
libs/type-id/: Cargo.toml
libs/type-id-v2/: Cargo.toml
libs/type-id-v2/src/: lib.rs  registry.rs  utils.rs
libs/type-id-v2/src/types/: mod.rs  pointer.rs
libs/type-id/derive/: Cargo.toml
libs/type-id/derive/src/: lib.rs  utils.rs
libs/type-id/macros/: Cargo.toml
libs/type-id/macros/src/: lib.rs  utils.rs
libs/type-id/src/: lib.rs  registry.rs
libs/type-id/src/types/: common.rs  compound.rs  mod.rs  number.rs  pointer.rs  std.rs
libs/type-id/tests/: basic.rs
tests/: Cargo.toml  rpc.rs  typescript.test.ts
tests/src/: common.rs  data.rs  greeting.rs  lib.rs  main.rs  outgoing.rs  stateful.rs  stream.rs
tests/sse/: mod.rs
(+54 files in other folders)
