[package]
name = "lipi"
version = "0.0.0"
edition = "2024"

license = "Apache-2.0"
keywords = ["lipi"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/setu"
description = "binary object representation"

[dependencies]
lipi-macros = { path = "./macros", version = "0.1" }