[package]
name = "setu"
version = "0.1.0"
edition = "2024"

license = "Apache-2.0"
keywords = ["setu", "rpc"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/setu"
description = "Remote Procedure Call (RPC) framework"

[dependencies]
nio = { version = "0.1.4", features = ["tokio-io"] }

# Transport
h2 = "0.4"
http = "1.4"
bytes = "1.11"

# TLS
tokio-rustls = "0.26"


[dev-dependencies]
