[package]
name = "setu"
version = "0.1.0"
edition = "2024"

license = "Apache-2.0"
keywords = ["setu", "rpc"]
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/setu"
description = "Remote Procedure Call (RPC) framework"

[dependencies]
# Async
nio = { version = "0.1.4", features = ["tokio-io"] }
futures = "0.3"
async-gen = "0.3"

# Encoder
lipi = { path = "../lipi", version = "0.1" }

# Transport
h2 = "0.4"
http = "1"
bytes = "1"

# TLS
tokio-rustls = "0.26"

# Macros
setu-macros = { path = "./macros", version = "0.1" }

# Other
std-lib = { path = "../std-lib", version = "0.1" }
type-id = { path = "../type-id", version = "0.2" }
setu-type-info = { path = "../setu-type-info", version = "0.1" }
