[package]
name = "type-id-v2"
version = "0.1.0"
edition = "2024"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/setu"

[dependencies]
serde = { version = "1", features = ["serde_derive"], default-features = false, optional = true }

[features]
serde = ["dep:serde"]