[package]
name = "type-id"
version = "0.1.0"
edition = "2024"

license = "Apache-2.0"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/setu"

[dependencies]
type-id-macros = { path = "./macros" }
serde = { version = "1", features = ["serde_derive"], default-features = false, optional = true }

[features]
serde = ["dep:serde"]