[package]
name = "setu-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote2 = "0.9"

setu-derive = { path = "../derive", version = "0.1" }
lipi-derive = { path = "../../lipi/derive", version = "0.1" }
type-id-derive = { path = "../../type-id/derive", version = "0.1" }